[ubsan] left-shift issue in globalDefinitions.hpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: hotspot
    • b14

      source loc:
      src/hotspot/share/utilities/globalDefinitions.hpp:691:80
      as in here:
      https://github.com/openjdk/jdk/compare/master...afshin-zafari:jdk:_additional_ubsan_checks#:~:text=inline%20void%20set_high,%3C%3C%2032%3B%20%7D

      observed in:
      serviceability/dcmd/gc/HeapDumpParallelTest (runtime error: left shift of negative value -1)
      serviceability/dcmd/gc/HeapDumpTest (runtime error: left shift of negative value -1)

            Assignee:
            Afshin Zafari
            Reporter:
            Afshin Zafari
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: