8365163: [ubsan] left-shift issue in globalDefinitions.hpp